--- a/demo/index.html
+++ b/demo/index.html
@@ -9,18 +9,18 @@
   </style>
 </head>
 <body>
-  <div id="demo"></div>
-
   <script type="module">
-    import { html, render } from 'lit';
+    // import { html, render } from 'lit';
     import '../src/HaxPainting.js';
 
-    render(
-      html`
-        <hax-painting></hax-painting>
-      `,
-      document.querySelector('#demo')
-    );
+    // render(
+    //   html`
+    //     <hax-painting></hax-painting>
+    //   `,
+    //   document.querySelector('#demo')
+    // );
   </script>
+
+  <hax-painting></hax-painting>
 </body>
 </html>
