--- a/demo/index.html
+++ b/demo/index.html
@@ -9,17 +9,7 @@
   </style>
 </head>
 <body>
-  <script type="module">
-    // import { html, render } from 'lit';
-    import '../src/HaxPainting.js';
-
-    // render(
-    //   html`
-    //     <hax-painting></hax-painting>
-    //   `,
-    //   document.querySelector('#demo')
-    // );
-  </script>
+  <script type="module" src="./src/HaxPainting.js"></script>
 
   <hax-painting></hax-painting>
 </body>
