--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
   </style>
 </head>
 <body>
-  <script type="module" src="./src/HaxPainting.js"></script>
+  <script type="module">
+    import '../src/HaxPainting.js';
+  </script>
 
   <hax-painting></hax-painting>
 </body>
