--- a/demo/index.html
+++ b/demo/index.html
@@ -9,9 +9,7 @@
   </style>
 </head>
 <body>
-  <script type="module">
-    import '../src/HaxPainting.js';
-  </script>
+  <script src='../scripts.js'></script>
 
   <hax-painting></hax-painting>
 </body>
