--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
   </style>
 </head>
 <body>
-  <script type="module">
-    import '../src/HaxPainting.js';
+  <script>
+    import './scripts.js';
   </script>
 
   <hax-painting></hax-painting>
