--- a/index.html
+++ b/index.html
@@ -9,9 +9,7 @@
   </style>
 </head>
 <body>
-  <script>
-    import './scripts.js';
-  </script>
+  <script src="./scripts.js"></script>
 
   <hax-painting></hax-painting>
 </body>
